refactor: optimize logging in subsystems to reduce output frequency in simulation mode